--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toughts</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <nav class="header_main_container">
+
+        <img src="/img/lampada.png">
+
+        <ul>
+            <li><a href="/">PENSAMENTOS</a></li>
+            <li><a href="/login">ENTRAR</a></li>
+            <li><a href="/register">REGISTRAR</a></li>
+        </ul>
+
+    </nav>
     {{{ body }}}
 </body>
 </html>
