--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -1,1 +1,33 @@
-<h1>page register</h1>
+<div class="container_form">
+
+    <h1>CRIAR NOVO USUÁRIO</h1>
+
+    <form action="/create" method="POST">
+
+        <div class="form_control">
+            <label for="name">Nome:</label>
+            <input type="text" name="name" placeholder="Digite seu nome">
+        </div>
+        <div class="form_control">
+            <label for="email">Email:</label>
+            <input type="email" name="email" placeholder="Digite seu Email">
+        </div>
+        <div class="form_control">
+            <label for="password">Senha:</label>
+            <input type="password" name="password" placeholder="Digite sua senha">
+        </div>
+        <div class="form_control">
+            <label for="confirmPassword">Confirme sua senha:</label>
+            <input type="password" name="confirmPassword" placeholder="Digite sua senha novamente">
+        </div>
+
+         <div class="form_control">
+             <input type="submit" value="CADASTRAR"> 
+        </div>
+        
+        
+       
+
+    </form>
+
+</div>
