--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,8 +6,8 @@
     <title>Toughts</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -22,6 +22,13 @@
         </ul>
 
     </nav>
-    {{{ body }}}
+  
+  <div class="container_body">
+      {{{ body }}}
+  </div>
+
+     <footer>
+        <p><span>Toughts</span> &copy; 2024</p>
+    </footer>
 </body>
 </html>
