--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,1 +1,22 @@
-<h1>page login</h1>
+<div class="container_form">
+
+    <h1>FAZER LOGIN</h1>
+
+    <form action="/login" method="POST">
+
+        <div class="form_control">
+            <label for="email">Email:</label>
+            <input type="email" name="email" placeholder="Digite seu Email">
+        </div>
+        <div class="form_control">
+            <label for="password">Senha:</label>
+            <input type="password" name="password" placeholder="Digite sua senha">
+        </div>
+
+         <div class="form_control">
+             <input type="submit" value="CADASTRAR"> 
+        </div>
+        
+    </form>
+
+</div>
