--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,12 @@ html, body{
     color: white;
 }
 
+.container_messages{
+    text-align: center;
+    padding: 1em 0;
+     background-color: rgb(59, 58, 58);
+}
+
 .container_body{
     min-height: 65vh;
 }
