--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 
     <nav class="header_main_container">
 
-        <img src="/img/lampada.png">
+       <a href="/"><img src="/img/lampada.png"></a>
 
         <ul>
             {{#if session.userid}}
